<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Personal Financial Planning</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="go">GO</string>
    <string name="loginsuccessful">Login Successful</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="title_activity_account_main">AccountMain</string>
    <string name="createAccount">Create New Account</string>
    <string name="viewAccounts">View Accounts</string>
    <string name="accountcreation">Account Creation</string>
    <string name="accountname">Account Name</string>
    <string name="accountbalance">Account Balance</string>
    <string name="monthlyinterestrate">Monthly Interest Rate</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="view">View Accounts</string>
    <string name="depositTransaction">Deposit</string>
    <string name="makeTransaction">Make Transaction</string>
    <string name="transactionReason">Reason for Transaction</string>
    <string name="transactionAmount">Transaction Amount</string>
    <string name="withdrawalTransaction">Withdrawal</string>
    <string name="accNameHeader">(Account Name)</string>
    <string name="viewSpendingCategoryReport">View Spending Category Report</string>
    <string name="StartDate">Start Date</string>
    <string name="EndDate">End Date</string>
    <string name="GenerateReport"></string>
    <string name="generateReport">Generate Report</string>
    <string name="back">Back</string>
    <string name="total">Total:</string>
    <string name="backToAccMain">Back</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>

</resources>
