<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/sDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.24"
        android:ems="10"
        android:inputType="date"
        android:text="@string/StartDate" />

    <EditText
        android:id="@+id/eDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.28"
        android:ems="10"
        android:inputType="date"
        android:text="@string/EndDate" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/makeReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generateReport" />

</LinearLayout>