<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:text="@string/register"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/RegButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="41dp"
        android:text="@string/go" />

        <EditText
            android:id="@+id/PassField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/NameField"
            android:layout_centerVertical="true"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/PassField"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:text="@string/confirmPassword"
            android:textSize="@dimen/activity_vertical_margin" />

        <EditText
            android:id="@+id/CPassField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/PassField"
            android:layout_below="@+id/textView4"
            android:layout_marginTop="18dp"
            android:ems="10" 
            android:inputType="textPassword"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/PassField"
            android:layout_alignLeft="@+id/textView1"
            android:text="@string/password"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/NameField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView3"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="17dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/NameField"
            android:layout_alignLeft="@+id/textView1"
            android:text="@string/username"
            android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>

