<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/accountcreation"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/AccNameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPersonName">
        
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/AccBalanceField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="numberDecimal" >
    </EditText>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/AccNameField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/accountbalance"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="49dp"
        android:text="@string/accountname"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/AccBalanceField"
        android:layout_marginTop="33dp"
        android:text="@string/monthlyinterestrate"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/MonthlyInterestField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/AccBalanceField"
        android:layout_below="@+id/textView4"
        android:ems="10"
        android:inputType="numberDecimal" />

<!--     <Button -->
<!--         android:id="@+id/declineButton" -->
<!--         android:layout_width="wrap_content" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:layout_alignBaseline="@+id/acceptButton" -->
<!--         android:layout_alignBottom="@+id/acceptButton" -->
<!--         android:layout_alignRight="@+id/MonthlyInterestField" -->
<!--         android:text="@string/decline" /> -->

    <Button
        android:id="@+id/acceptButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/MonthlyInterestField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/accept" />

</RelativeLayout>